2004-04-28  Bruno Haible  <bruno@clisp.org>

	* basename.c (FILESYSTEM_PREFIX_LEN, ISSLASH): Treat Cygwin like
	Windows, since it now accepts Windows pathnames.
	* findprog.c (find_in_path): Treat Cygwin like Windows, since it also
	implicitly appends .exe to executables.
	* localcharset.c (ISSLASH): Treat Cygwin like Windows, since it now
	accepts Windows pathnames.
	* pathname.h (ISSLASH, IS_PATH_WITH_DIR, FILESYSTEM_PREFIX_LEN): Treat
	Cygwin like Windows, since it now accepts Windows pathnames.
	* relocatable.c (ISSLASH, IS_PATH_WITH_DIR, FILESYSTEM_PREFIX_LEN):
	Treat Cygwin like Windows, since it now accepts Windows pathnames.
	(compute_curr_prefix): Likewise.
	* progreloc.c (ISSLASH, IS_PATH_WITH_DIR, FILESYSTEM_PREFIX_LEN): Treat
	Cygwin like Windows, since it now accepts Windows pathnames.
	Reported by Derek Robert Price <derek@ximbiot.com>.

2004-04-23  Bruno Haible  <bruno@clisp.org>

	* localcharset.c (get_charset_aliases): Allow the CHARSETALIASDIR
	environment variable to override LIBDIR.
	Suggested by Matthias Clasen <mclasen@redhat.com>.

2004-04-20  Jim Meyering  <jim@meyering.net>
            Bruno Haible  <bruno@clisp.org>

	* localcharset.c (get_charset_aliases) [!VMS && !WIN32]: Don't leak
	memory when realloc fails.

2004-03-18  Paul Eggert  <eggert@twinsun.com>
            Bruno Haible  <bruno@clisp.org>

	* mbswidth.h: Include <wchar.h> only if HAVE_DECL_MBSWIDTH_IN_WCHAR_H,
	not on all platforms that have <wchar.h>.
	* mbswidth.c: Include <stdio.h> and <time.h> before <wchar.h>.

2004-03-19  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (install-exec-clean): Don't remove libgettextlib.a on
	AIX.
	Reported by Kouichi Hashikawa <z01a7ksy@cs.ecip.tohoku.ac.jp>.

2004-03-08  Bruno Haible  <bruno@clisp.org>

	* csharpcomp.c (compile_csharp_using_sscli): Test whether csc is not
	the chicken scheme's 'csc' compiler.
	Reported by Colin Marquardt <colin@marquardt-home.de>.

2004-02-07  Bruno Haible  <bruno@clisp.org>
