@@ -60,6 +60,10 @@
 
 #endif
 
+#ifndef HAVE_ENVIRON_DECL
+extern char **environ;
+#endif
+
 #ifndef STDIN_FILENO
 # define STDIN_FILENO 0
 #endif
