@@ -1,3 +1,8 @@
+2004-05-27  Bruno Haible  <bruno@clisp.org>
+
+	* execute.c (environ): Declare if needed.
+	* pipe.c (environ): Likewise.
+
 2004-04-28  Bruno Haible  <bruno@clisp.org>
 
 	* basename.c (FILESYSTEM_PREFIX_LEN, ISSLASH): Treat Cygwin like
